--- a/index.html
+++ b/index.html
@@ -1,1 +1,85 @@
 
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="images/favicon.jpg"/>
+    <link rel="stylesheet" href="styles.css"/>
+    <title>Ashar</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
+</head>
+<body>
+    <nav class="navbar">
+        <ul>
+        <li class="list"><a href="#home">Home</a></li>
+        <li class="list"><a href="#recipe">Recipe</a></li>
+        <li class="list"><a href="#about">About</a></li>
+        <li class="list"><a href="#contact">Contact</a></li></ul>  
+    </nav>
+    <div id="home">
+        <div>
+        <h1 class="heading">Recipe Website</h1>
+        <p class="welcome">Welcome to the recipe website</p>
+        </div>
+    </div>
+    <div id="recipe">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="image-wrapper">
+                        <img src="images/recipe1.jpg"/>
+                        <div class="image-text">
+                            <h5>Pan Cake</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius error reprehenderit illo.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="image-wrapper">
+                        <img src="images/recipe2.jpg"/>
+                        <div class="image-text">
+                            <h5>Pizza</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius error reprehenderit illo.</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="image-wrapper">
+                        <img src="images/recipe3.jpg"/>
+                        <div class="image-text">
+                            <h5>Pastry</h5>
+                            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius error reprehenderit illo.</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="about">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="image-bg">
+                        <img src="images/about.jpg" class="image"/>
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <h4>About</h4>
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Praesentium fugit fuga nostrum provident dignissimos aliquid ipsa commodi harum totam sapiente omnis, magnam beatae qui amet, quae, aspernatur quos. Exercitationem vero natus iste ratione, voluptate maiores earum labore asperiores optio perferendis ipsam modi ut ullam eaque magnam necessitatibus beatae! Dolorum soluta labore molestiae ab, voluptatem porro ut, excepturi quos reprehenderit ipsum corporis, enim praesentium temporibus?</p>
+                </div>
+            </div>
+        </div>
+    </div>
+    <div id="contact">
+        <div class="container">        
+        <p>Stay connected for more recipes.</p>
+        <img src="images/github.jpg"/>
+        <img src="images/instagram.jpg"/>
+        <img src="images/linkedin.jpg"/>
+    </div>
+    </div>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+</body>
+</html>
